--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ a footer with links. -->
     <link rel="stylesheet" href="./styles/media.css">
     <link rel="icon" href="./images/maca.png">
     <link rel="stylesheet" href="./styles/window.css">
-    <link rel="stylesheet" href="./styles/fot.css">
+    <!-- <link rel="stylesheet" href="./styles/fot.css"> -->
     <script src="./JS/main.js"></script>
     <script type="text/javascript" src="./JS/current-device.min.js"></script>
     <link rel="stylesheet" href="./styles/svg.css">
@@ -80,8 +80,8 @@ a footer with links. -->
     </small>
     
 </div>
-<div style="z-index: 10009;"><div id="shadow_down" class="shadow_css_ dong1_"></div>
-    <div id="input_window" class="window_css_ dong0101">
+<div style="z-index: 10009;">
+    <div id="input_window" class="window_css_ dong0101" style=" box-shadow: 0 4px 60px rgba(0, 0, 0, 0.5), 0 1px 20px rgba(0, 0, 0, 0.06);">
         <div class="her" style="width: 1%;"></div>
         <div class="colll" style="text-align: right;" title="关闭" onclick="hideiput();"></div>
         <div class="center" style="transform: translateY(80%) translateX(6%); font-size: 15px; color: #333;">
@@ -100,7 +100,7 @@ a footer with links. -->
     </div> -->
     <!--悬浮窗口-->
     <!-- <img src="./图片1.png" alt="" srcset=""> -->
-    <about id="window" class="window_css dong">
+    <about id="window" class="window_css dong" style="box-shadow: 0 4px 80px rgba(0, 0, 0, 0.5), 0 1px 40px rgba(0, 0, 0, 0.16);">
         <div class="her" style="width: 1%;"></div>
         <div class="colll" style="text-align: right;" title="关闭" onclick="hideWindow()"></div>
         <div class="center" style="transform: translateY(60%); font-size: 28px; color: #333;">
@@ -117,7 +117,7 @@ a footer with links. -->
         </div>
     </about>
     <!--出现悬浮窗口后,背景变暗-->
-    <div id="shadow" class="shadow_css dong1"></div></div>
+
     <script>
         _0er();
         function _0er() {
